[project]
name = "poet"
version = "0.2.0"
description = "A foundational response-time analysis (RTA) tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "response-time-analysis>=0.1.1",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "joblib-stubs>=1.5.3.0.20251223",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
